package theory.structural.bridge.withBridge;

public class ArtistResource implements Resource{
    @Override
    public String getTitle() {
        return "Artist Title";
    }

    @Override
    public String getImage() {
        return "Artist Image";
    }
}
