package theory.structural.bridge.withBridge;

public interface Resource {
    String getTitle();
    String getImage();
}
