package theory.structural.bridge.withBridge;

public interface View {
    void setResource(Resource resource);
    void show();
}
