@startuml

title __WITHBRIDGE's Class Diagram__\n

  namespace theory.structural.bridge.withBridge {
    class theory.structural.bridge.withBridge.AlbumResource {
        + getImage()
        + getTitle()
    }
  }
  

  namespace theory.structural.bridge.withBridge {
    class theory.structural.bridge.withBridge.ArtistResource {
        + getImage()
        + getTitle()
    }
  }
  

  namespace theory.structural.bridge.withBridge {
    class theory.structural.bridge.withBridge.FullScreenView {
        + FullScreenView()
        + setResource()
        + show()
    }
  }
  

  namespace theory.structural.bridge.withBridge {
    class theory.structural.bridge.withBridge.Main {
        {static} + main()
    }
  }
  

  namespace theory.structural.bridge.withBridge {
    interface theory.structural.bridge.withBridge.Resource {
        {abstract} + getImage()
        {abstract} + getTitle()
    }
  }
  

  namespace theory.structural.bridge.withBridge {
    class theory.structural.bridge.withBridge.ThumbNailView {
        + ThumbNailView()
        + setResource()
        + show()
    }
  }
  

  namespace theory.structural.bridge.withBridge {
    interface theory.structural.bridge.withBridge.View {
        {abstract} + setResource()
        {abstract} + show()
    }
  }
  

  theory.structural.bridge.withBridge.AlbumResource .up.|> theory.structural.bridge.withBridge.Resource
  theory.structural.bridge.withBridge.ArtistResource .up.|> theory.structural.bridge.withBridge.Resource
  theory.structural.bridge.withBridge.FullScreenView .up.|> theory.structural.bridge.withBridge.View
  theory.structural.bridge.withBridge.FullScreenView o-- theory.structural.bridge.withBridge.Resource : resource
  theory.structural.bridge.withBridge.ThumbNailView .up.|> theory.structural.bridge.withBridge.View
  theory.structural.bridge.withBridge.ThumbNailView o-- theory.structural.bridge.withBridge.Resource : resource


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
